# shellcoder

./: .gitignore  CMakeLists.txt  README.md  shellcoder.rc
include/: code_compiler.h  directx.hpp  llvm_precomp.h  resource.h
resources/: Info.plist  shellcoder.icns
src/: code_compiler.cpp  glad.c  main.cpp
